--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<h1 style="font-family: sans-serif; text-align: center; color: rgb(83,75,75);">Wesley's Challenge for September, 11th</h1>
-<p style="font-family: sans-serif; text-align:center; color: rgb(83,75,75)">Learn about the basics of web development - specifically dive into HTML & CSS.</p>
-<p style="font-family: sans-serif; text-align:center; color: rgb(83,75,75)">I'll achieve this goal by diving into <a href="https://www.google.com">more learning resources</a>.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="daily-challenge.css" />
+    <title>My Daily Challenge</title>
+  </head>
+  <body>
+    <h1>Wesley's Challenge for September, 11th</h1>
+    <p>
+      Learn about the basics of web development - specifically dive into HTML &
+      CSS.
+    </p>
+    <p>
+      I'll achieve this goal by diving into
+      <a href="https://www.google.com">more learning resources</a>.
+    </p>
+  </body>
+</html>
