added fonts and id

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title>My Daily Challenge</title>
   </head>
   <body>
-    <h1>Wesley's Challenge for September, 11th</h1>
-    <p>
-      Learn about the basics of web development - specifically dive into HTML &
-      CSS.
+    <h1>Wesley's Challenge for September, 12th</h1>
+    <p id="todays-challenge">
+      Learn about the basics of web development - specifically dive into HTML & CSS.
     </p>
     <p>
       I'll achieve this goal by diving into
