--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="daily-challenge.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/daily-challenge.css" />
+    <link rel="stylesheet" href="styles/base.css">
     <title>My Daily Challenge</title>
   </head>
   <body>
-    <h1>Wesley's Challenge for September, 12th</h1>
+    <img src="images/challenges-trophy.jpg" alt="A trophy">
+    <h1>Wesley's Challenge for September, 13th</h1>
     <p id="todays-challenge">
       Learn about the basics of web development - specifically dive into HTML & CSS.
     </p>
     <p>
-      I'll achieve this goal by diving into
-      <a href="https://www.google.com">more learning resources</a>.
+      Explore the <a href="full-week.html">full week</a>.
     </p>
   </body>
 </html>
