added ul and styles

--- a/full-week.html
+++ b/full-week.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <h1>My Upcoming Challenges</h1>
-    <a href="index.html">Go back</a>
+    <a href="index.html" id="back">Go back</a>
     <h2>Goals for the week:</h2>
-    <p>&gt; Finish first week of the course;</p>
-    <p>&gt; Practice a lot.</p>
+    <ul>
+      <li>Finish second week of the course;</li>
+      <li>Practice a lot;</li>
+      <li>Plan the next steps.</li>
+    </ul>
   </body>
 </html>
