more updates in css and html

--- a/full-week.html
+++ b/full-week.html
@@ -2,19 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles/full-week.css">
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/full-week.css" />
+    <link rel="stylesheet" href="styles/base.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Upcoming Challenges</title>
   </head>
   <body>
-    <h1>My Upcoming Challenges</h1>
-    <a href="index.html" id="back">Go back</a>
-    <h2>Goals for the week:</h2>
-    <ul>
-      <li>Finish second week of the course;</li>
-      <li>Practice a lot;</li>
-      <li>Plan the next steps.</li>
-    </ul>
+    <header>
+      <h1>My Upcoming Challenges</h1>
+      <p id="description">These are my goals for the next days</p>
+      <a href="index.html" id="back">Go back</a>
+    </header>
+    <main>
+      <h2>Goals for the week:</h2>
+      <ul>
+        <li class="highlight-goal">
+          <h3>Monday, September 19th</h3>
+          <p>Finish second week of the course;</p>
+        </li>
+        <li class="highlight-goal">
+          <h3>Weekend, September 17th & 18th</h3>
+          <p>Practice a lot;</p>
+        </li>
+        <li>
+          <h3>Sunday, September 18th</h3>
+          <p>Plan the next steps;</p>
+        </li>
+        <li>
+          <h3>Tuesday, September 20th</h3>
+          <p>Check advanced HTML & CSS concepts.</p>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
