--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles/daily-challenge.css" />
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/base.css" />
     <title>My Daily Challenge</title>
   </head>
   <body>
-    <img src="images/challenges-trophy.jpg" alt="A trophy">
-    <h1>Wesley's Challenge for September, 14th</h1>
-    <p id="todays-challenge">
-      Learn about the basics of web development - specifically dive into HTML & CSS.
-    </p>
-    <p>
-      Explore the <a href="full-week.html">full week</a>.
-    </p>
+    <main>
+      <img src="images/challenges-trophy.jpg" alt="A trophy" />
+      <h1>Wesley's Challenge for <span>September, 18th</span></h1>
+      <p id="todays-challenge">
+        Learn about the basics of web development - specifically dive into HTML
+        & CSS.
+      </p>
+    </main>
+    <footer>
+      <p>Explore the <a href="full-week.html">full week</a>.</p>
+    </footer>
   </body>
 </html>
