added favicons and absolute paths

--- a/full-week.html
+++ b/full-week.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles/full-week.css" />
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="/styles/full-week.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <title>My Upcoming Challenges</title>
   </head>
   <body>
     <header>
       <h1>My Upcoming Challenges</h1>
       <p id="description">These are my goals for the next days</p>
-      <a href="index.html" id="back">Go back</a>
+      <a href="/index.html" id="back">Go back</a>
     </header>
     <main>
       <h2>Goals for the week:</h2>
