--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles/daily-challenge.css" />
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="/styles/daily-challenge.css" />
+    <link rel="stylesheet" href="/styles/base.css" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <title>My Daily Challenge</title>
   </head>
   <body>
     <main>
-      <img src="images/challenges-trophy.jpg" alt="A trophy" />
-      <h1>Wesley's Challenge for <span>September, 18th</span></h1>
+      <img src="/images/challenges-trophy .jpg" alt="A trophy" />
+      <h1>Wesley's Challenge for <span>Tuesday, September 20th</span></h1>
       <p id="todays-challenge">
         Learn about the basics of web development - specifically dive into HTML
         & CSS.
       </p>
     </main>
     <footer>
-      <p>Explore the <a href="full-week.html">full week</a>.</p>
+      <p>Explore the <a href="/full-week.html">full week</a>.</p>
     </footer>
   </body>
 </html>
